将角色配置界面从单个大Screen逐步拆成更容易维护的独立结构。